<?xml version="1.0"?>
<package format="2">
  <name>go1_republisher</name>
  <version>0.1.0</version>
  <description>Unitree Go1 Republisher node</description>

  <maintainer email="hi@aatb.ch">AATB GmbH / Thibault Brevet</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/aatb-ch/go1-republisher</url>
  <author email="hi@aatb.ch">AATB GmbH / Thibault Brevet</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>

